Fixed baseurl hopefully.

--- a/guitar/index.html
+++ b/guitar/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Guitars</title>
-	<link rel="stylesheet" href="/css/normalize.css">
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="http://mcourteaux.github.io/Dirk-Courteaux-Guitars//css/normalize.css">
+	<link rel="stylesheet" href="http://mcourteaux.github.io/Dirk-Courteaux-Guitars//css/style.css">
 </head>
 <body>
 <div id="container">
@@ -18,8 +18,8 @@
 
 	<nav>
 	<ul>
-		<li><a href="/" title="About" class="hvr-underline-from-left">About</a></li>
-		<li><a href="/guitar/" title="Guitars" class="hvr-underline-from-left">Guitars</a></li>
+		<li><a href="http://mcourteaux.github.io/Dirk-Courteaux-Guitars//" title="About" class="hvr-underline-from-left">About</a></li>
+		<li><a href="http://mcourteaux.github.io/Dirk-Courteaux-Guitars//guitar/" title="Guitars" class="hvr-underline-from-left">Guitars</a></li>
 	</ul>
 </nav>
 
