--- a/guitar/index.html
+++ b/guitar/index.html
@@ -48,7 +48,7 @@
 <a href="https://mcourteaux.github.io/Dirk-Courteaux-Guitars/guitar/backpack/">
   <span>Backpack</span>
 	<div class="img-container">
-		<div class="img hvr-grow" style="background-image: url('/img/guitar/backpack/thumb.jpg');"></div>
+		<div class="img hvr-grow" style="background-image: url('https://mcourteaux.github.io/Dirk-Courteaux-Guitars//img/guitar/backpack/thumb.jpg');"></div>
 		<div class="loop"></div>
 	</div>
 </a>
@@ -63,7 +63,7 @@
 <a href="https://mcourteaux.github.io/Dirk-Courteaux-Guitars/guitar/torres_1/">
   <span>Antonio De Torres</span>
 	<div class="img-container">
-		<div class="img hvr-grow" style="background-image: url('/img/guitar/torres_1/thumb.jpg');"></div>
+		<div class="img hvr-grow" style="background-image: url('https://mcourteaux.github.io/Dirk-Courteaux-Guitars//img/guitar/torres_1/thumb.jpg');"></div>
 		<div class="loop"></div>
 	</div>
 </a>
@@ -78,7 +78,7 @@
 <a href="https://mcourteaux.github.io/Dirk-Courteaux-Guitars/guitar/reyes/">
   <span>Reyes</span>
 	<div class="img-container">
-		<div class="img hvr-grow" style="background-image: url('/img/guitar/reyes/thumb.jpg');"></div>
+		<div class="img hvr-grow" style="background-image: url('https://mcourteaux.github.io/Dirk-Courteaux-Guitars//img/guitar/reyes/thumb.jpg');"></div>
 		<div class="loop"></div>
 	</div>
 </a>
@@ -93,7 +93,7 @@
 <a href="https://mcourteaux.github.io/Dirk-Courteaux-Guitars/guitar/friederich/">
   <span>Daniel Friederich</span>
 	<div class="img-container">
-		<div class="img hvr-grow" style="background-image: url('/img/guitar/friederich/thumb.jpg');"></div>
+		<div class="img hvr-grow" style="background-image: url('https://mcourteaux.github.io/Dirk-Courteaux-Guitars//img/guitar/friederich/thumb.jpg');"></div>
 		<div class="loop"></div>
 	</div>
 </a>
@@ -108,7 +108,7 @@
 <a href="https://mcourteaux.github.io/Dirk-Courteaux-Guitars/guitar/torres_2/">
   <span>Torres 2</span>
 	<div class="img-container">
-		<div class="img hvr-grow" style="background-image: url('/img/guitar/torres_2/thumb.jpg');"></div>
+		<div class="img hvr-grow" style="background-image: url('https://mcourteaux.github.io/Dirk-Courteaux-Guitars//img/guitar/torres_2/thumb.jpg');"></div>
 		<div class="loop"></div>
 	</div>
 </a>
@@ -133,7 +133,7 @@
 <a href="https://mcourteaux.github.io/Dirk-Courteaux-Guitars/guitar/martin_one_1/">
   <span>Martin 1</span>
 	<div class="img-container">
-		<div class="img hvr-grow" style="background-image: url('/img/guitar/martin_one_1/thumb.jpg');"></div>
+		<div class="img hvr-grow" style="background-image: url('https://mcourteaux.github.io/Dirk-Courteaux-Guitars//img/guitar/martin_one_1/thumb.jpg');"></div>
 		<div class="loop"></div>
 	</div>
 </a>
@@ -148,7 +148,7 @@
 <a href="https://mcourteaux.github.io/Dirk-Courteaux-Guitars/guitar/uf_if/">
   <span>UF Innovative features</span>
 	<div class="img-container">
-		<div class="img hvr-grow" style="background-image: url('/img/guitar/uf_if/thumb.jpg');"></div>
+		<div class="img hvr-grow" style="background-image: url('https://mcourteaux.github.io/Dirk-Courteaux-Guitars//img/guitar/uf_if/thumb.jpg');"></div>
 		<div class="loop"></div>
 	</div>
 </a>
@@ -163,7 +163,7 @@
 <a href="https://mcourteaux.github.io/Dirk-Courteaux-Guitars/guitar/taylor/">
   <span>Taylor GA</span>
 	<div class="img-container">
-		<div class="img hvr-grow" style="background-image: url('/img/guitar/taylor/thumb.jpg');"></div>
+		<div class="img hvr-grow" style="background-image: url('https://mcourteaux.github.io/Dirk-Courteaux-Guitars//img/guitar/taylor/thumb.jpg');"></div>
 		<div class="loop"></div>
 	</div>
 </a>
@@ -188,7 +188,7 @@
 <a href="https://mcourteaux.github.io/Dirk-Courteaux-Guitars/guitar/Leocaster/">
   <span>Leocaster</span>
 	<div class="img-container">
-		<div class="img hvr-grow" style="background-image: url('/img/guitar/Leocaster/thumb.jpg');"></div>
+		<div class="img hvr-grow" style="background-image: url('https://mcourteaux.github.io/Dirk-Courteaux-Guitars//img/guitar/Leocaster/thumb.jpg');"></div>
 		<div class="loop"></div>
 	</div>
 </a>
