--- a/guitar/backpack/index.html
+++ b/guitar/backpack/index.html
@@ -25,7 +25,7 @@
 
 	<header class="page-header">
 	<div class="base">
-		<div class="thumb" style="background-image: url('/img/guitar/backpack/thumb.jpg');"></div>
+		<div class="thumb" style="background-image: url('https://mcourteaux.github.io/Dirk-Courteaux-Guitars//img/guitar/backpack/thumb.jpg');"></div>
 		<div class="triangle"></div>
 		<h2>Backpack - 2009</h2>
 	</div>
