--- a/guitar/taylor/index.html
+++ b/guitar/taylor/index.html
@@ -25,7 +25,7 @@
 
 	<header class="page-header">
 	<div class="base">
-		<div class="thumb" style="background-image: url('/img/guitar/taylor/thumb.jpg');"></div>
+		<div class="thumb" style="background-image: url('https://mcourteaux.github.io/Dirk-Courteaux-Guitars//img/guitar/taylor/thumb.jpg');"></div>
 		<div class="triangle"></div>
 		<h2>Taylor Grand Auditorium - 2015</h2>
 	</div>
