--- a/guitar/torres_2/index.html
+++ b/guitar/torres_2/index.html
@@ -25,7 +25,7 @@
 
 	<header class="page-header">
 	<div class="base">
-		<div class="thumb" style="background-image: url('/img/guitar/torres_2/thumb.jpg');"></div>
+		<div class="thumb" style="background-image: url('https://mcourteaux.github.io/Dirk-Courteaux-Guitars//img/guitar/torres_2/thumb.jpg');"></div>
 		<div class="triangle"></div>
 		<h2>Torres 2 - Start - 2012  &gt;  Finish - 2016 ?</h2>
 	</div>
