--- a/guitar/index.html
+++ b/guitar/index.html
@@ -31,7 +31,7 @@
 	</header>
 
 	<div class="base">
-		<p>Guitars are organized by type, i.e.: classical, steelstring and electric guitars.</p>
+		<p>Guitars are organized by type, i.e. classical, steelstring and electric guitars.</p>
 	</div>
 
 	
