--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="base">
 	<h2>Welcome!</h2>
 	<p class="welcome">
-		My name is <strong>Dirk</strong>. I&rsquo;m a passionate guitar builder. I&rsquo;m a student at <strong>CMB Puurs</strong> where I completed the for years training of classical guitar building. This schoolyear (2015-2016) I will finish the steelstring training. On this website, I will showcase my work. There are three divisions being Clssical giutars, Steelstring guitars and Electical guitars
+		My name is <strong>Dirk</strong>. I&rsquo;m a passionate guitar builder. I&rsquo;m a student at <strong>CMB Puurs</strong> where I completed the for years training of classical guitar building. This schoolyear (2015-2016) I will finish the steelstring training. On this website, I will showcase my work. There are three divisions being Classical guitars, Steelstring guitars and Electical guitars.
 	</p>
 	<div id="avatar" class="hvr-grow"></div>
 </div>
