--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="base">
 	<h2>Welcome!</h2>
 	<p class="welcome">
-		My name is <strong>Dirk</strong>. I&rsquo;m a passionate guitar builder. I&rsquo;m a student at <strong>CMB Puurs</strong> for 7 years now where I completed the 4 years training of classical guitar building. This schoolyear (2015-2016) I will finish the steelstring training. On this website, I will showcase my work. There are three divisions being <strong>Classical</strong> guitars, <strong>Steelstring</strong> guitars and <strong>Electical</strong> guitars.
+		My name is <strong>Dirk</strong>. I&rsquo;m a passionate guitar builder. I&rsquo;m a student at <strong>CMB Puurs</strong> for 7 years now where I completed the 4 years training of classical guitar building. This schoolyear (2015-2016) I will finish the steelstring training. On this website, I will showcase my work. There are three divisions being <strong>Classical</strong> guitars, <strong>Steelstring</strong> guitars and <strong>Electrical</strong> guitars.
 	</p>
 	<div id="avatar" class="hvr-grow"></div>
 </div>
