--- a/guitar/Leocaster/index.html
+++ b/guitar/Leocaster/index.html
@@ -83,7 +83,14 @@
 	</div>
 
 	<div class="base markdown">
-		
+		<p>This is my first electrical guitar</p>
+
+<p><img src="https://farm1.staticflickr.com/691/20951252194_482d7ce38b_h.jpg" alt="" />
+<img src="https://farm1.staticflickr.com/655/21547839756_28d6f4f5ad_h.jpg" alt="" />
+<img src="https://farm1.staticflickr.com/733/20951264414_512be55dfb_c.jpg" alt="" />
+<img src="https://farm1.staticflickr.com/681/21547852926_c6fe14ddec_c.jpg" alt="" />
+<img src="https://farm1.staticflickr.com/697/21385958960_9ec8b39e74_c.jpg" alt="" /></p>
+
 	</div>
 	<footer>
 © Copyright 2015 - Martijn Courteaux
