--- a/guitar/leocaster/index.html
+++ b/guitar/leocaster/index.html
@@ -83,7 +83,7 @@
 	</div>
 
 	<div class="base markdown">
-		<p>This is my first electrical guitar</p>
+		<p>This is my first electrical guitar. The name Leocaster is derivated from Telecaster (which is the actual model), and The Leonardo project, which is a project that aims to build guitars using non-tropical woods.</p>
 
 <p><img src="https://farm1.staticflickr.com/691/20951252194_482d7ce38b_h.jpg" alt="" />
 <img src="https://farm1.staticflickr.com/655/21547839756_28d6f4f5ad_h.jpg" alt="" />
