Fixed domain in hugo generation;

--- a/guitar/reyes/index.html
+++ b/guitar/reyes/index.html
@@ -4,28 +4,28 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Reyes</title>
-	<link rel="stylesheet" href="https://mcourteaux.github.io/Dirk-Courteaux-Guitars//css/normalize.css">
-	<link rel="stylesheet" href="https://mcourteaux.github.io/Dirk-Courteaux-Guitars//css/style.css">
+	<link rel="stylesheet" href="http://dcguitars.be//css/normalize.css">
+	<link rel="stylesheet" href="http://dcguitars.be//css/style.css">
 </head>
 <body>
 <div id="container">
 	<header class="site-header">
 <div class="base">
-<a href="https://mcourteaux.github.io/Dirk-Courteaux-Guitars/"><h1>Dirk Courteaux Guitars</h1></a>
+<a href="http://dcguitars.be/"><h1>Dirk Courteaux Guitars</h1></a>
 <p>Handcrafted high-quality guitars</p>
 </div>
 </header>
 
 	<nav>
 	<ul>
-		<li><a href="https://mcourteaux.github.io/Dirk-Courteaux-Guitars//" title="About" class="hvr-underline-from-left">About</a></li>
-		<li><a href="https://mcourteaux.github.io/Dirk-Courteaux-Guitars//guitar/" title="Guitars" class="hvr-underline-from-left">Guitars</a></li>
+		<li><a href="http://dcguitars.be//" title="About" class="hvr-underline-from-left">About</a></li>
+		<li><a href="http://dcguitars.be//guitar/" title="Guitars" class="hvr-underline-from-left">Guitars</a></li>
 	</ul>
 </nav>
 
 	<header class="page-header">
 	<div class="base">
-		<div class="thumb" style="background-image: url('https://mcourteaux.github.io/Dirk-Courteaux-Guitars//img/guitar/reyes/thumb.jpg');"></div>
+		<div class="thumb" style="background-image: url('http://dcguitars.be//img/guitar/reyes/thumb.jpg');"></div>
 		<div class="triangle"></div>
 		<h2>Reyes - 2011  -  Flamenco</h2>
 	</div>
