Updates from merge from Dirk.

--- a/guitar/index.html
+++ b/guitar/index.html
@@ -185,10 +185,10 @@
             
 
 	       	
-<a href="http://dcguitars.be/guitar/Leocaster/">
+<a href="http://dcguitars.be/guitar/leocaster/">
   <span>Leocaster</span>
 	<div class="img-container">
-		<div class="img hvr-grow" style="background-image: url('http://dcguitars.be//img/guitar/Leocaster/thumb.jpg');"></div>
+		<div class="img hvr-grow" style="background-image: url('http://dcguitars.be//img/guitar/leocaster/thumb.jpg');"></div>
 		<div class="loop"></div>
 	</div>
 </a>
