--- a/guitar/leocaster/index.html
+++ b/guitar/leocaster/index.html
@@ -25,7 +25,7 @@
 
 	<header class="page-header">
 	<div class="base">
-		<div class="thumb" style="background-image: url('http://dcguitars.be//img/guitar/Leocaster/thumb.jpg');"></div>
+		<div class="thumb" style="background-image: url('http://dcguitars.be//img/guitar/leocaster/thumb.jpg');"></div>
 		<div class="triangle"></div>
 		<h2>Leocaster - 2015</h2>
 	</div>
@@ -83,7 +83,13 @@
 	</div>
 
 	<div class="base markdown">
-		
+		<p>This is my first electrical guitar</p>
+
+<p><img src="https://farm1.staticflickr.com/691/20951252194_482d7ce38b_h.jpg" alt="" />
+<img src="https://farm1.staticflickr.com/655/21547839756_28d6f4f5ad_h.jpg" alt="" />
+<img src="https://farm1.staticflickr.com/733/20951264414_512be55dfb_c.jpg" alt="" />
+<img src="https://farm1.staticflickr.com/681/21547852926_c6fe14ddec_c.jpg" alt="" /></p>
+
 	</div>
 	<footer>
 © Copyright 2015 - Martijn Courteaux
